Misc todos
- Cleanup debug tooltips in F3, remove unused lang entries, merge config option with enableDebug
- Fix chunk generator generating feature not getting set
- Add separate climate/heat tooltip display styles.
- Fix serialization error in prev. commit